--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body {
   background-color: #ffffff;
   display: flex;
   justify-content: center;
-  font-size: 20px;
+  font-size: 14px;
   flex-direction: column;
   align-items: center;
   width: 100%;
@@ -24,7 +24,8 @@ header {
   align-items: center;
   justify-content: center;
   width: 100%;
-  margin-top: 60px;
+  margin-top: 45px;
+  padding-top: 10px;
   border-radius: 10px;
   position: fixed;
   background-color: #ffffff;
@@ -65,14 +66,14 @@ span.contact:hover::before {
   margin: 4px;
 }
 .main {
-  width: 70%;
+  width: 80%;
   display: flex;
   justify-content: center;
   flex-direction: column;
 }
 .advert {
   margin-top: 100px;
-  width: 80%;
+  width: 100%;
   position: relative;
   padding-left: 100px;
   transition: 0.3s;
@@ -80,7 +81,7 @@ span.contact:hover::before {
 .advert h3::before {
   content: "";
   width: 5px;
-  height: 400px;
+  height: 100%;
   left: 0;
   background-color: #ff0000;
   position: absolute;
@@ -97,13 +98,13 @@ div.img {
   transition: 0.5s;
 }
 .img-1 img:hover {
-  width: 1410px;
+  width: 910px;
 }
 img.img-2 {
   transition: 0.3s;
 }
 img.img-2:hover {
-  width: 89%;
+  width: 101%;
 }
 .introduce {
   display: flex;
@@ -122,7 +123,7 @@ img.img-2:hover {
 }
 .avt {
   background-color: #fff;
-  width: 400px;
+  width: 250px;
   height: 500px;
   display: flex;
   align-items: center;
