--- a/index.css
+++ b/index.css
@@ -177,44 +177,101 @@ a.be:hover::before {
   justify-content: center;
 }
 
-.button {
-  padding: 1em 2em;
-  border: none;
-  border-radius: 5px;
-  font-weight: bold;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-  color: #ff0000;
-  transition: all 500ms;
-  font-size: 18px;
-  position: relative;
-  overflow: hidden;
-  outline: 2px solid #ff0000;
+.drop:hover {
+  cursor: pointer;
 }
 
-button:hover {
-  color: #ffffff;
-  transform: scale(1.05);
-  outline: 2px solid #ff0000;
-  box-shadow: 2px 3px 10px -2px #ff0000;
+footer {
+  margin: 100px 0 100px 0;
+  width: 100%;
+  padding: 20px;
+}
+.social ul {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 20px 0 60px 0;
+}
+.social ul li {
+  margin: 30px 50px 30px 50px;
+}
+
+button {
+  text-decoration: none;
+  font-size: 25px;
+  border: none;
+  background: none;
+  font-weight: 600;
+  font-family: "Poppins", sans-serif;
+  cursor: pointer;
+  margin-bottom: 38px;
 }
 
 button::before {
-  content: "";
-  position: absolute;
-  left: -50px;
-  top: 0;
-  width: 0;
-  height: 100%;
-  background-color: #ff0000;
-  transform: skewX(45deg);
-  z-index: -1;
-  transition: width 500ms;
+  margin-left: auto;
 }
 
-button:hover::before {
-  width: 200%;
+button::after,
+button::before {
+  content: "";
+  width: 0%;
+  height: 2px;
+  background: #f44336;
+  display: block;
+  transition: 0.5s;
 }
-.drop:hover {
+
+button:hover::after,
+button:hover::before {
+  width: 100%;
+}
+
+.head-footer ul li {
   cursor: pointer;
+  transition: 0.3s;
+}
+.head-footer ul li:hover {
+  font-size: 29px;
+}
+
+.head-footer ul li.l1:hover {
+  color: #ff6666;
+}
+.head-footer ul li.l2:hover {
+  color: #ff3300;
+}
+.head-footer ul li.l3:hover {
+  color: #0099ff;
+}
+.head-footer ul li.l4:hover {
+  color: #ff33cc;
+}
+.head-footer ul li.l5:hover {
+  color: #0099ff;
+}
+
+.bottom-footer {
+  display: flex;
+  flex-direction: row;
+}
+.bottom-footer-left {
+  width: 230px;
+}
+.bottom-footer-left ul {
+  list-style: none;
+  line-height: 24px;
+  font-size: 14px;
+  width: 100%;
+}
+.right-element {
+  margin-left: 50px;
+}
+.right-element a {
+  text-decoration: none;
+  line-height: 26px;
+  color: #001100;
+}
+.bottom-footer-right {
+  display: flex;
 }
