--- a/index.css
+++ b/index.css
@@ -3,7 +3,11 @@
   padding: 0;
   margin: 0;
 }
-
+@media (max-width: 768px) {
+  * {
+    flex-direction: column;
+  }
+}
 body {
   font-family: system-ui, "Segoe UI", "Open Sans", "Helvetica Neue", sans-serif;
   background-color: #ffffff;
@@ -12,6 +16,7 @@ body {
   font-size: 14px;
   flex-direction: column;
   align-items: center;
+  background-color: rgb(247, 244, 242);
 }
 header {
   display: flex;
@@ -121,20 +126,20 @@ img.img-2:hover {
 .profile {
   position: -webkit-sticky;
   position: sticky;
-  top: 10px;
+  top: 80px;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
 }
+
 .avt {
   background-color: #fff;
-  width: 250px;
-  height: 500px;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  padding: 20px;
 }
 .bf {
   text-decoration: none;
