--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ header {
 .center-head {
   font-weight: 600;
   width: 100%;
-  padding: 200px 0 80px 100px;
+  padding: 200px 0 0 100px;
 }
 .btn {
   padding: 50px 0 50px 0;
