--- a/index.css
+++ b/index.css
@@ -4,7 +4,8 @@
   box-sizing: border-box;
 }
 body {
-  font-family: Arial, sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   line-height: 1.6;
 }
 
@@ -13,6 +14,7 @@ header {
   padding: 1rem 0;
   background-repeat: no-repeat;
   position: relative;
+  transition: 1s;
 }
 
 .center-head {
@@ -35,7 +37,7 @@ header {
 
 .convert {
   width: 100%;
-  margin: 230px 0 20px 0;
+  margin: 220px 0 20px 0;
 }
 
 header .container {
@@ -189,4 +191,107 @@ footer div.container + div.container {
   margin-top: 50px;
   padding: 30px;
   background-color: #e8e8e8;
+}
+.main-order {
+  padding: 100px 0 100px 0;
+}
+.coffee-order {
+  font-size: 14px;
+  width: 69.5%;
+  margin-bottom: 50px;
+}
+.slideProduct button {
+  border: none;
+  padding: 8px;
+  cursor: pointer;
+  align-items: flex-start;
+}
+.slideProduct button + button {
+  margin-left: 2px;
+}
+.conver-slide-button {
+  display: flex;
+  margin: 20px 18px 20px 0;
+  justify-content: flex-end;
+}
+.slider-container {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+.slider-wrapper {
+  overflow: hidden;
+  width: 100%;
+}
+
+.slider,
+.slider-2,
+.slider-3,
+.slider-4,
+.slider-5,
+.slider-6 {
+  display: flex;
+  transition: transform 1s ease;
+  justify-content: space-between;
+}
+
+.slide,
+.slide-2,
+.slide-3,
+.slide-4,
+.slide-5,
+.slide-6 {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  text-align: center;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+/* aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa */
+.slide img,
+.slide-2 img,
+.slide-3 img,
+.slide-4 img,
+.slide-5 img,
+.slide-6 img {
+  width: 250px;
+  padding: 10px;
+  padding-bottom: 0;
+}
+
+.product + .product {
+  margin-left: 30px;
+}
+.product {
+  width: 33.33%;
+}
+.nav-btn {
+  padding: 10px 20px;
+  background-color: #333;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  font-size: 1em;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 1;
+}
+
+.prev {
+  left: 10px;
+}
+
+.next {
+  right: 10px;
+}
+
+.nav-btn:focus {
+  outline: none;
+}
+.name-price {
+  margin-top: 20px;
 }
