--- a/index.css
+++ b/index.css
@@ -22,6 +22,9 @@ header {
   width: 100%;
   padding: 190px 0 0 100px;
 }
+.center-head-element {
+  width: 40%;
+}
 .btn {
   padding: 50px 0 50px 0;
   width: 130px;
@@ -38,6 +41,11 @@ header {
 .convert {
   width: 100%;
   margin: 220px 0 20px 0;
+}
+
+div.topic-page-1 {
+  width: 700px;
+  font-size: 16px;
 }
 
 header .container {
@@ -103,9 +111,7 @@ h2 {
   align-items: center;
   justify-content: center;
 }
-.menu-item + .menu-item {
-  margin: 0 0 2rem 10rem;
-}
+
 .menu-item p {
   font-size: 14px;
 }
@@ -249,8 +255,9 @@ footer div.container + div.container {
   text-align: center;
   font-size: 1.5em;
   font-weight: bold;
+  transition: 0.3s;
 }
-/* aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa */
+
 .slide img,
 .slide-2 img,
 .slide-3 img,
@@ -260,6 +267,16 @@ footer div.container + div.container {
   width: 250px;
   padding: 10px;
   padding-bottom: 0;
+}
+
+.slide:hover,
+.slide-2:hover,
+.slide-3:hover,
+.slide-4:hover,
+.slide-5:hover,
+.slide-6:hover {
+  width: 253px;
+  box-shadow: 0 0 2px 0 black;
 }
 
 .product + .product {
@@ -294,4 +311,208 @@ footer div.container + div.container {
 }
 .name-price {
   margin-top: 20px;
+}
+.complex-background {
+  width: 100%;
+  height: 560px;
+  background-image: url("https://rangrangcoffee.watacorp.com/wp-content/uploads/2021/09/RR-Banner-SUB-scaled.jpeg"); /* Đường dẫn đến hình ảnh nền */
+  background-size: cover; /* Điều chỉnh kích thước hình nền để bao phủ toàn bộ phần tử */
+  background-repeat: no-repeat; /* Hình nền không lặp lại */
+  margin: 0;
+  background-color: rgba(0, 0, 0, 0.5); /* Màu nền với độ trong suốt */
+}
+.complex-topic,
+.complex-topic-2 {
+  margin: 10% 0 10% 0;
+  width: 35%;
+}
+.complex-topic-2 {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.complex-topic button,
+.complex-topic-2 button {
+  padding: 10px 30px 10px 30px;
+  font-size: 16px;
+  font-weight: 100;
+  border: none;
+  cursor: pointer;
+  background-color: #cc9966;
+  transition: 0.3s;
+  color: #fff;
+}
+.complex-topic button:hover,
+.complex-topic-2 button:hover {
+  background-color: #000;
+  color: #fff;
+}
+.complex-background-2 {
+  width: 100%;
+  height: 300px;
+  background-image: url("https://rangrangcoffee.watacorp.com/wp-content/uploads/2021/09/RR-Banner-SUB2-scaled.jpeg"); /* Đường dẫn đến hình ảnh nền */
+  background-size: cover; /* Điều chỉnh kích thước hình nền để bao phủ toàn bộ phần tử */
+  background-repeat: no-repeat; /* Hình nền không lặp lại */
+  margin: 0;
+  background-color: rgba(0, 0, 0, 0.5); /* Màu nền với độ trong suốt */
+  display: flex;
+  align-items: center;
+}
+.complex-background-2 p {
+  text-align: center;
+}
+.choose-coffee {
+  display: flex;
+
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.btn-choose-coffee {
+  cursor: pointer;
+  position: relative;
+  padding: 10px 20px 10px 20px;
+}
+
+.btn-choose-coffee.active::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -5px;
+  width: 100%;
+  height: 4px;
+  background-color: #333;
+  transition: 0.5s;
+}
+.choose-coffee::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -5px;
+  width: 100%;
+  height: 1px;
+  background-color: #ccc;
+}
+.menu-sub {
+  width: 22%;
+  padding: 20px;
+  border: 1px solid #333;
+  margin-top: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.subcription {
+  color: rgb(68, 68, 68);
+  padding: 0 0 100px 0;
+  position: relative;
+}
+
+.subcription::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -5px;
+  width: 100%;
+  height: 1px;
+  background-color: #ccc;
+}
+
+.bg-item-1 {
+  width: 247x;
+  height: 130px;
+  background-image: url("https://rangrangcoffee.watacorp.com/wp-content/uploads/2021/06/RRN5.jpg"); /* Đường dẫn đến hình ảnh nền */
+  background-size: cover; /* Điều chỉnh kích thước hình nền để bao phủ toàn bộ phần tử */
+  background-repeat: no-repeat; /* Hình nền không lặp lại */
+  margin: 0;
+  background-color: rgba(0, 0, 0, 0.5); /* Màu nền với độ trong suốt */
+  display: flex;
+}
+.sub-item button {
+  padding: 10px 30px 10px 30px;
+  font-size: 16px;
+  font-weight: 100;
+  border: none;
+  cursor: pointer;
+  background-color: #cc9966;
+  transition: 0.3s;
+  color: #fff;
+  width: 100%;
+  margin-top: 10px;
+}
+.sub-item span,
+h2,
+p {
+  padding-bottom: 20px;
+}
+
+.sub-item button:hover {
+  background-color: #000;
+  color: #fff;
+}
+.topic-4 {
+  display: flex;
+  flex-direction: row;
+  width: 80%;
+}
+.element-4 + .element-4-2 {
+  margin-left: 130px;
+}
+
+.topic-4 p {
+  font-weight: 400;
+  font-size: 14px;
+}
+.topic-container {
+  display: flex;
+  justify-content: center;
+  padding: 20px 0 100px 0;
+}
+div.reg-pagkage {
+  width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.menu-item + .menu-item {
+  margin: 0 0 2rem 10rem;
+}
+center img + img {
+  margin-left: 20px;
+}
+.Coffeshop {
+  padding: 50px 0 100px 0;
+}
+.center-head-element font {
+  font-size: 32px;
+}
+.item-container,
+.item-container-2 {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.social a + a {
+  margin-left: 30px;
+}
+.element-4 img {
+  width: 364.88px;
+}
+.element-4-2 img {
+  width: 364.88px;
+}
+.complex-topic h4 {
+  font-size: 32px;
+  font-weight: 600;
+}
+.complex-topic p {
+  padding: 10px 0 10px 0;
+  font-size: 20px;
+  font-weight: 200;
+}
+.navigation {
+  display: none;
 }
